--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">CodepunkDemo</string>
+    <string name="title_activity_interactive_image_view">InteractiveImageViewActivity</string>
+    <string name="menu_controls">Controls</string>
 </resources>
