--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,12 @@
     <string name="app_name">CodepunkDemo</string>
     <string name="title_activity_interactive_image_view">InteractiveImageViewActivity</string>
     <string name="menu_controls">Controls</string>
+
+
+    <string name="label_drawable">Drawable:</string>
+    <string name="label_scale_type">Scale Type:</string>
+    <string name="label_pan">Pan:</string>
+    <string name="label_scale">Scale:</string>
+
+    <string name="text_vertical_bar">|</string>
 </resources>
