--- a/app/src/main/java/com/codepunk/demo/TODO.txt
+++ b/app/src/main/java/com/codepunk/demo/TODO.txt
@@ -1,13 +1,13 @@
 TODO NEXT:
-In InteractiveImageViewControlsFragment:
-Really think about how/when we're setting spinner values/mins/maxes, ImageView sx/sy/cx/cy, etc.
+Catch when scrolling image view and we hit drawer. Drawer intercepts touch. Messes with alpha etc.
 
 In InteractiveImageView:
-Clean up setLayoutInternal
+Clean up setLayoutInternal, combine with onScroll etc.
 
 In InteractiveImageViewControlsFragment:
 Save/restore state of scale, center, etc.
 Research: Does ImageView remember Matrix values after configuration change?
 
 TODO:
+Edge Effects !!
 Play with cropToPadding, see how it behaves. (Like "viewport" in my original concept?)
