Tighter layout for seek bar layouts

--- a/app/src/main/java/com/codepunk/demo/TODO.txt
+++ b/app/src/main/java/com/codepunk/demo/TODO.txt
@@ -2,6 +2,8 @@ TODO NEXT:
 Address all TODO synchronized
 Catch when scrolling image view and we hit drawer. Drawer intercepts touch. Messes with alpha etc.
 
+Test to see if image is at "baseline" before saving/restoring on config change
+
 In InteractiveImageView:
 Clean up setLayoutInternal, combine with onScroll etc.
 
