--- a/app/src/main/java/com/codepunk/demo/TODO.txt
+++ b/app/src/main/java/com/codepunk/demo/TODO.txt
@@ -1,12 +1,15 @@
 TODO NEXT:
 Address all TODO synchronized
+Only fling when fling enabled
+Only scroll when scroll enabled
+Only scale when pinch-to-zoom enabled
 Test to see if image is at "baseline" before saving/restoring on config change
 
 In InteractiveImageView:
 Clean up setLayoutInternal, combine with onScroll etc.
 
 In InteractiveImageViewControlsFragment:
-Save/restore state of scale, center, etc.
+Save/restore state of scale, center, etc. <-- looking good for now
 Research: Does ImageView remember Matrix values after configuration change?
 
 TODO:
