--- a/app/src/main/java/com/codepunk/demo/TODO.txt
+++ b/app/src/main/java/com/codepunk/demo/TODO.txt
@@ -21,6 +21,6 @@ TODO Think about using pools for Matrix, RectF, float[] ?
 ---------
 
 Next in this latest iteration:
-* Figure out why onScroll produces shaky results
+x * Figure out why onScroll produces shaky results
 * Figure out why onScale sometimes shifts the image
-* Get onDoubleTapEvent to work (and remove clampTransform) <-- This works!!
+x * Get onDoubleTapEvent to work (and remove clampTransform) <-- This works!!
