--- a/app/src/main/java/com/codepunk/demo/TODO.txt
+++ b/app/src/main/java/com/codepunk/demo/TODO.txt
@@ -31,9 +31,17 @@ TODO !! Read http://i-rant.arnaudbos.com/matrices-for-developers/ (Matrices for 
 
 ------------
 
+TODO NEXT:
+I need to include an "adjustTrans" block in constrainTransformInfo. :-(
+The reason is, for example, when double-tapping, before starting the animation, we need to
+factor that into the constraining. Sigh.
+
 New TODO:
 
-Bug: When zooming out and scale type is Fit Center or Fit End, goes down to 0, 0 instead
+Think about when to test for drawable has intrinsic size
+xxx Bug: When zooming out and scale type is Fit Center or Fit End, goes down to 0, 0 instead
+xxx Bug: When double-clicking and trying to set without adjusting, there is a jump during animation
+Bug: When double-clicking and it zooms down, ignores scaleType positioning
 Bug: Saving transform info over orientation change no longer works
 Add TransformInfo to mPoolManager?
 Only fling when fling enabled
