--- a/app/src/main/java/com/codepunk/demo/TODO.txt
+++ b/app/src/main/java/com/codepunk/demo/TODO.txt
@@ -31,20 +31,27 @@ TODO !! Read http://i-rant.arnaudbos.com/matrices-for-developers/ (Matrices for 
 
 ------------
 
-TODO NEXT:
 xxx I need to include an "adjustTrans" block in constrainTransformInfo. :-(
-The reason is, for example, when double-tapping, before starting the animation, we need to
-factor that into the constraining. Sigh.
+xxx The reason is, for example, when double-tapping, before starting the animation, we need to
+xxx factor that into the constraining. Sigh.
 
-New TODO:
-
-Think about when to test for drawable has intrinsic size
 xxx Bug: When zooming out and scale type is Fit Center or Fit End, goes down to 0, 0 instead
 xxx Bug: When double-clicking and trying to set without adjusting, there is a jump during animation
 xxx Bug: When double-clicking and it zooms down, ignores scaleType positioning
+
+
+
+TODO NEXT:
+
+Create a version of transformImage with animate argument
+Call THAT from onDoubleTap, instead of  mTransformer.startTransform.
+Add animate argument to transformInfo? Or make pending version?
+
+Bug: onScroll still sometimes clashes with onScale when pinching down far
 Bug: Saving transform info over orientation change no longer works
 Add TransformInfo to mPoolManager?
 Only fling when fling enabled
 Only scroll when scroll enabled
 Only scale when pinch-to-zoom enabled
 Test to see if image is at "baseline" before saving/restoring on config change
+Think about when to test for drawable has intrinsic size
