--- a/app/src/main/java/com/codepunk/demo/TODO.txt
+++ b/app/src/main/java/com/codepunk/demo/TODO.txt
@@ -56,3 +56,5 @@ Only scroll when scroll enabled
 Only scale when pinch-to-zoom enabled
 Test to see if image is at "baseline" before saving/restoring on config change
 Think about when to test for drawable has intrinsic size
+
+Bug: When switching from one image to another, need to reset matrix?
