--- a/app/src/main/java/com/codepunk/demo/TODO.txt
+++ b/app/src/main/java/com/codepunk/demo/TODO.txt
@@ -7,7 +7,8 @@ Test to see if image is at "baseline" before saving/restoring on config change
 Think about when to test for drawable has intrinsic size
 
 xxx Bug: When Y can't scroll and you fling X, sometimes you still see Y edge effects
-Bug: Saving transform info over orientation change no longer works
+xxx Bug: Saving transform info over orientation change no longer works
+Bug: If scaleType is centerCrop and you go from landscape to portrait, scale isn't adjusted correctly
 Bug: onScroll still sometimes clashes with onScale when pinching down far -- jerkiness etc.
 Bug: When switching from one image to another, need to reset matrix?
 Bug: When padding is not 0, coming up with wrong trans x/y when minimized in centerCrop (so,
