Re-grab pivot point while scrolling

--- a/app/src/main/java/com/codepunk/demo/TODO.txt
+++ b/app/src/main/java/com/codepunk/demo/TODO.txt
@@ -9,3 +9,10 @@ Remove TODOs and revisit warnings
 When pinch scaling, always send adjusted scale in case one direction gets clamped and the other doesn't
 
 Add isTouchEvent to ImageViewInteractinator?
+
+1. onScale
+2. onDoubleTapUp
+3. EdgeEffects
+
+Think about onSingleTapUp. If I don't set doubleTapEnabled, can I remove the listener from the GestureDetector?
+(That way I'd get a quicker single tap event)
