Fixed jumpy image when going from one pointer to two (or vice versa)

--- a/app/src/main/java/com/codepunk/demo/TODO.txt
+++ b/app/src/main/java/com/codepunk/demo/TODO.txt
@@ -10,9 +10,14 @@ When pinch scaling, always send adjusted scale in case one direction gets clampe
 
 Add isTouchEvent to ImageViewInteractinator?
 
-1. onScale
-2. onDoubleTapUp
-3. EdgeEffects
+xxx 1. onScale
+2. Transforminator
+3. smoothTransform
+4. onDoubleTapUp
+5. EdgeEffects
 
 Think about onSingleTapUp. If I don't set doubleTapEnabled, can I remove the listener from the GestureDetector?
 (That way I'd get a quicker single tap event)
+
+xxx Bug:
+xxx If scaling, and then remove 1st finger but keep 2nd down, image jumps. What do I need to do?
