Cool new builder-style Transform class

--- a/app/src/main/java/com/codepunk/demo/TODO.txt
+++ b/app/src/main/java/com/codepunk/demo/TODO.txt
@@ -9,11 +9,10 @@ Remove TODOs and revisit warnings
 When pinch scaling, always send adjusted scale in case one direction gets clamped and the other doesn't
 
 Add isTouchEvent to ImageViewInteractinator?
-ug
 xxx 1. onScale
-2. Transforminator
-3. smoothTransform
-4. onDoubleTapUp
+xxx 2. Transforminator
+xxx 3. smoothTransform
+xxx 4. onDoubleTap
 5. EdgeEffects
 
 xxx Think about onSingleTapUp. If I don't set doubleTapEnabled, can I remove the listener from the GestureDetector?
@@ -21,3 +20,6 @@ xxx (That way I'd get a quicker single tap event)
 
 xxx Bug:
 xxx If scaling, and then remove 1st finger but keep 2nd down, image jumps. What do I need to do?
+
+Pull resolve/clamp out of private version of transform?
+all public versions would have to
