--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">CodepunkDemo</string>
-    <string name="title_activity_interactive_image_view">InteractiveImageViewActivity</string>
+    <string name="title_activity_interactive_image_view">Image View Interactinator</string>
     <string name="menu_controls">Controls</string>
 
     <string name="label_drawable">Drawable:</string>
@@ -12,9 +12,4 @@
     <string name="label_image_pivot_y">Image Pivot Y:</string>
     <string name="label_image_scale_x">Image Scale X:</string>
     <string name="label_image_scale_y">Image Scale Y:</string>
-    <string name="label_reset">Reset</string>
-    <string name="label_scale_2">Scale x2</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
